--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Navbar -->
     <nav class="navbar">
       <div class="navbar-container">
-        <a href="index.html" class="brand">KL2</a>
+        <a href="index.html" class="brand" ><img src="L2.png" alt="" style="align-content: center; width: 40px; margin-right: 10px;" align="middle">KL2</a>
         <button class="menu-toggle" aria-label="Toggle Menu">
           <span class="bar"></span>
           <span class="bar"></span>
