--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
     <!-- Navbar -->
     <nav class="navbar">
       <div class="navbar-container">
-        <a href="index.html" class="brand" ><img src="L2.png" alt="" style="align-content: center; width: 40px; margin-right: 10px;" align="middle">KL2</a>
+        <a href="index.html" class="brand"
+          ><img
+            src="L2.png"
+            alt=""
+            style="align-content: center; width: 40px; margin-right: 10px"
+            align="middle"
+          />KL2</a
+        >
         <button class="menu-toggle" aria-label="Toggle Menu">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -27,7 +34,7 @@
 
     <!-- Header -->
     <header class="header">
-      <h1>Belajar Fungsi Kubik</h1>
+      <h1 id="simpleUsage"></h1>
       <p>
         Temukan dunia kalkulus yang menyenangkan dengan memahami fungsi kubik
         dan cara menghitung titik ekstrem!
@@ -39,31 +46,67 @@
       <h2>Latar Belakang</h2>
       <p>
         Fungsi kubik adalah persamaan kubik yang sudah dikenal sejak zaman Mesir
-        dan Yunani kuno. Persamaan ini muncul dari masalah pengukuran tanah. <br>
-        Latar belakang pembuatan web pembelajaran kalkulus ini berfokus pada kebutuhan untuk menyediakan sarana belajar yang mudah diakses, interaktif, dan efektif bagi siswa atau mahasiswa yang mempelajari kalkulus. Berikut ini beberapa poin yang dapat dijadikan latar belakang pembuatan web pembelajaran kalkulus: <br>
+        dan Yunani kuno. Persamaan ini muncul dari masalah pengukuran tanah.
+        <br />
+        Latar belakang pembuatan web pembelajaran kalkulus ini berfokus pada
+        kebutuhan untuk menyediakan sarana belajar yang mudah diakses,
+        interaktif, dan efektif bagi siswa atau mahasiswa yang mempelajari
+        kalkulus. Berikut ini beberapa poin yang dapat dijadikan latar belakang
+        pembuatan web pembelajaran kalkulus: <br />
 
-1. Aksesibilitas Materi Pembelajaran: Kalkulus adalah salah satu mata pelajaran yang penting dan dasar dalam banyak bidang, termasuk sains, teknik, ekonomi, dan teknologi. Namun, banyak siswa kesulitan mengakses materi yang lengkap dan terstruktur karena terbatasnya sumber daya, waktu pengajaran di kelas, atau kesenjangan akses terhadap bahan ajar berkualitas. Web pembelajaran kalkulus dapat menyediakan akses yang lebih luas dan fleksibel. <br>
+        1. Aksesibilitas Materi Pembelajaran: Kalkulus adalah salah satu mata
+        pelajaran yang penting dan dasar dalam banyak bidang, termasuk sains,
+        teknik, ekonomi, dan teknologi. Namun, banyak siswa kesulitan mengakses
+        materi yang lengkap dan terstruktur karena terbatasnya sumber daya,
+        waktu pengajaran di kelas, atau kesenjangan akses terhadap bahan ajar
+        berkualitas. Web pembelajaran kalkulus dapat menyediakan akses yang
+        lebih luas dan fleksibel. <br />
 
-2. Dukungan Belajar Mandiri: Dengan perkembangan teknologi, banyak siswa yang kini memiliki akses internet dan perangkat elektronik. Web pembelajaran memungkinkan siswa untuk belajar mandiri sesuai kecepatan dan kebutuhan mereka masing-masing. Mereka dapat mempelajari ulang materi, mengulang latihan, dan memperdalam konsep tanpa terbatas oleh jadwal atau lokasi. <br>
- 
-3. Efektivitas Waktu dan Sumber Daya: Web pembelajaran memungkinkan pengajar menghemat waktu dan sumber daya, karena materi yang sudah tersusun dapat diakses kapan saja oleh siswa atau mahasiswa. Hal ini juga memungkinkan pengajar untuk memantau progres siswa atau mahasiswa, memberikan materi tambahan, atau menambahkan latihan baru tanpa harus mencetak atau membagikan materi secara fisik. <br>
+        2. Dukungan Belajar Mandiri: Dengan perkembangan teknologi, banyak siswa
+        yang kini memiliki akses internet dan perangkat elektronik. Web
+        pembelajaran memungkinkan siswa untuk belajar mandiri sesuai kecepatan
+        dan kebutuhan mereka masing-masing. Mereka dapat mempelajari ulang
+        materi, mengulang latihan, dan memperdalam konsep tanpa terbatas oleh
+        jadwal atau lokasi. <br />
 
-4. Pemanfaatan Teknologi dalam Pendidikan: Mengintegrasikan teknologi ke dalam pendidikan, khususnya dalam mata pelajaran seperti kalkulus, dapat mendorong perkembangan keterampilan digital siswa sekaligus meningkatkan keterampilan berpikir logis dan analitis. <br>
+        3. Efektivitas Waktu dan Sumber Daya: Web pembelajaran memungkinkan
+        pengajar menghemat waktu dan sumber daya, karena materi yang sudah
+        tersusun dapat diakses kapan saja oleh siswa atau mahasiswa. Hal ini
+        juga memungkinkan pengajar untuk memantau progres siswa atau mahasiswa,
+        memberikan materi tambahan, atau menambahkan latihan baru tanpa harus
+        mencetak atau membagikan materi secara fisik. <br />
 
-Dengan adanya web pembelajaran kalkulus, diharapkan siswa atau mahasiswa dapat belajar lebih mudah, memahami materi kalkulus dengan lebih baik, dan meningkatkan hasil pembelajaran mereka.
+        4. Pemanfaatan Teknologi dalam Pendidikan: Mengintegrasikan teknologi ke
+        dalam pendidikan, khususnya dalam mata pelajaran seperti kalkulus, dapat
+        mendorong perkembangan keterampilan digital siswa sekaligus meningkatkan
+        keterampilan berpikir logis dan analitis. <br />
+
+        Dengan adanya web pembelajaran kalkulus, diharapkan siswa atau mahasiswa
+        dapat belajar lebih mudah, memahami materi kalkulus dengan lebih baik,
+        dan meningkatkan hasil pembelajaran mereka.
       </p>
     </section>
 
-    <script src="script.js"></script>
 
     <!-- Footer -->
     <footer>
       <p>
-        © 2024 Fungsi Kubik | Dibuat oleh IF Kelas A Kelompok 2 (Kenanga, Annisa,
-        Sahrul, Zaskia)
+        © 2024 Fungsi Kubik | Dibuat oleh IF Kelas A Kelompok 2 (Kenanga,
+        Annisa, Sahrul, Zaskia)
       </p>
     </footer>
+    <script src="script.js"></script>
 
+    <script src="https://unpkg.com/typeit@8.8.7/dist/index.umd.js"></script>
     
+    <script>
+      new TypeIt("#simpleUsage", {
+        strings: "SELAMAT DATANG DI WEB KAMI",
+        speed: 150,
+        waitUntilVisible: true,
+        loop: true,
+        breakLines: false,
+      }).go();
+    </script>
   </body>
 </html>
