--- a/index.html
+++ b/index.html
@@ -43,50 +43,44 @@
 
     <!-- Latar Belakang -->
     <section id="Latarbelakang">
-      <h2>Latar Belakang</h2>
+      <h2 style="text-align: center">Latar Belakang</h2>
       <p>
         Fungsi kubik adalah persamaan kubik yang sudah dikenal sejak zaman Mesir
         dan Yunani kuno. Persamaan ini muncul dari masalah pengukuran tanah.
         <br />
-        Latar belakang pembuatan web pembelajaran kalkulus ini berfokus pada
-        kebutuhan untuk menyediakan sarana belajar yang mudah diakses,
-        interaktif, dan efektif bagi siswa atau mahasiswa yang mempelajari
-        kalkulus. Berikut ini beberapa poin yang dapat dijadikan latar belakang
-        pembuatan web pembelajaran kalkulus: <br />
-
-        1. Aksesibilitas Materi Pembelajaran: Kalkulus adalah salah satu mata
-        pelajaran yang penting dan dasar dalam banyak bidang, termasuk sains,
-        teknik, ekonomi, dan teknologi. Namun, banyak siswa kesulitan mengakses
-        materi yang lengkap dan terstruktur karena terbatasnya sumber daya,
-        waktu pengajaran di kelas, atau kesenjangan akses terhadap bahan ajar
-        berkualitas. Web pembelajaran kalkulus dapat menyediakan akses yang
-        lebih luas dan fleksibel. <br />
-
-        2. Dukungan Belajar Mandiri: Dengan perkembangan teknologi, banyak siswa
-        yang kini memiliki akses internet dan perangkat elektronik. Web
-        pembelajaran memungkinkan siswa untuk belajar mandiri sesuai kecepatan
-        dan kebutuhan mereka masing-masing. Mereka dapat mempelajari ulang
-        materi, mengulang latihan, dan memperdalam konsep tanpa terbatas oleh
-        jadwal atau lokasi. <br />
-
-        3. Efektivitas Waktu dan Sumber Daya: Web pembelajaran memungkinkan
+        Latar belakang pembuatan web pembelajaran kalkulus fungsi kubik ini
+        berfokus pada kebutuhan untuk menyediakan sarana belajar yang mudah
+        diakses, interaktif, dan efektif bagi mahas atau mahasiswa yang
+        mempelajari kalkulus. Berikut ini beberapa poin yang dapat dijadikan
+        latar belakang pembuatan web pembelajaran kalkulus: <br />
+<ol style="padding-left: 30px;">
+  <li>Aksesibilitas Materi Pembelajaran: Kalkulus adalah salah satu mata
+    pelajaran yang penting dan dasar dalam banyak bidang, termasuk sains,
+    teknik, ekonomi, dan teknologi. Namun, banyak mahasiswa kesulitan
+    mengakses materi yang lengkap dan terstruktur karena terbatasnya sumber
+    daya, waktu pengajaran di kelas, atau kesenjangan akses terhadap bahan
+    ajar berkualitas. Web pembelajaran kalkulus fungsi kubik ini dapat
+    menyediakan akses yang lebih luas dan fleksibel.</li>
+    <li>Dukungan Belajar Mandiri: Dengan perkembangan teknologi, banyak
+      mahasiswa yang kini memiliki akses internet dan perangkat elektronik.
+      Web pembelajaran memungkinkan mahasiswa untuk belajar mandiri sesuai
+      kecepatan dan kebutuhan mereka masing-masing. Mereka dapat mempelajari
+      ulang materi, mengulang latihan, dan memperdalam konsep tanpa terbatas
+      oleh jadwal atau lokasi.</li>
+      <li>Efektivitas Waktu dan Sumber Daya: Web pembelajaran memungkinkan
         pengajar menghemat waktu dan sumber daya, karena materi yang sudah
-        tersusun dapat diakses kapan saja oleh siswa atau mahasiswa. Hal ini
-        juga memungkinkan pengajar untuk memantau progres siswa atau mahasiswa,
-        memberikan materi tambahan, atau menambahkan latihan baru tanpa harus
-        mencetak atau membagikan materi secara fisik. <br />
-
-        4. Pemanfaatan Teknologi dalam Pendidikan: Mengintegrasikan teknologi ke
-        dalam pendidikan, khususnya dalam mata pelajaran seperti kalkulus, dapat
-        mendorong perkembangan keterampilan digital siswa sekaligus meningkatkan
-        keterampilan berpikir logis dan analitis. <br />
-
-        Dengan adanya web pembelajaran kalkulus, diharapkan siswa atau mahasiswa
-        dapat belajar lebih mudah, memahami materi kalkulus dengan lebih baik,
-        dan meningkatkan hasil pembelajaran mereka.
+        tersusun dapat diakses kapan saja oleh siswa atau mahasiswa.</li>
+      <li>Pemanfaatan Teknologi dalam Pendidikan: Mengintegrasikan teknologi ke
+          dalam pendidikan, khususnya dalam mata pelajaran seperti kalkulus, dapat
+          mendorong perkembangan keterampilan digital mahasiswa sekaligus
+          meningkatkan keterampilan berpikir logis dan analitis.</li>
+</ol>
+        Dengan adanya web pembelajaran kalkulus fungsi kubik ini, diharapkan
+        siswa atau mahasiswa dapat belajar lebih mudah, memahami materi kalkulus
+        fungsi kubik dengan lebih baik, dan meningkatkan hasil pembelajaran
+        mereka.
       </p>
     </section>
-
 
     <!-- Footer -->
     <footer>
@@ -98,7 +92,7 @@
     <script src="script.js"></script>
 
     <script src="https://unpkg.com/typeit@8.8.7/dist/index.umd.js"></script>
-    
+
     <script>
       new TypeIt("#simpleUsage", {
         strings: "SELAMAT DATANG DI WEB KAMI",
