--- a/materi.html
+++ b/materi.html
@@ -29,13 +29,13 @@
    
 
     <!-- Materi Fungsi Kubik -->
-    <section id="materi">
+    <section id="materi" style="text-align: left;">
       <h2>Materi Fungsi Kubik</h2>
       <p>
         <h3>Definisi :</h3>
         Fungsi kubik adalah fungsi polinomial derajat 3. <br>
         fungsi kubik juga ialah fungsi yang memiliki pangkat tertinggi adalah pangkat 3 
-        <h3>Bentuk umum :</h3> <em>f(x) = ax<sup>3</sup> + bx<sup>2</sup> + cx + d</em>. <br>
+        <h3>Bentuk umum :</h3> <em style="padding: 2px 4px; background-color: rgba(75, 165, 243, 0.867); border-radius: 5px">f(x) = ax<sup>3</sup> + bx<sup>2</sup> + cx + d</em>. <br>
         di mana a , b , c , dan d adalah konstanta dan a tidak sama dengan nol
         <h3>Bentuk kurva</h3>
         Fungsi kubik ini memiliki bentuk kurva yang bisa naik atau turun tergantung
@@ -45,27 +45,29 @@
     <!-- Contoh Soal -->
     
     <section id="Rumus">
-      <h2>Ciri ciri fungsi kubik</h2>
-      <p>
+    <h2>Bentuk grafik fungsi kubik</h2>
+    <div style="text-align: left;">
+    <p>  Grafik fungsi kubik berbentuk kurva yang umumnya melengkung dan memiliki perubahan arah (baik naik-turun atau turun-naik). <br>
+    Grafiknya bisa berpotongan dengan sumbu-x di tiga titik, dua titik, satu titik, atau bahkan tidak sama sekali. <br>
+    <h4>Note :</h4>
     Jika a > 0 grafik fungsi kubik akan turun dari kiri ke kanan, lalu naik kembali. <br>
     Jika a < 0 grafiknya akan naik dari kiri ke kanan, lalu turun kembali. <br>
-    Contoh sederhana: <br>
-    Jika f(x) = x ^ 3 grafiknya naik dari kiri ke kanan tanpa berbalik arah. <br>
-    Jika f(x) = - x ^ 3 grafiknya turun dari kiri ke kanan.
-      </p>
+    Contoh sederhana: <br> </div>
+    Jika f(x) = x<sup>3</sup> grafiknya naik dari kiri ke kanan tanpa berbalik arah. <br>
+    <img src="x3.png" alt="middle" width="250"> <br>
+    Jika f(x) = -x<sup>3</sup> grafiknya turun dari kiri ke kanan. <br>
+    <img src="-x3.png" alt="middle" width="250"> <br>
+    Jika grafik f(x)=x<sup>3</sup> dan f(x)=-x<sup>3</sup>disatukan : <br>
+    <img src="xx3.png" alt="middle" width="250">
+    </p>
     </section>
         <section id="contoh">
-            <h2>Bentuk grafik fungsi kubik</h2>
-            <p>
-            Grafik fungsi kubik berbentuk kurva yang umumnya melengkung dan memiliki perubahan arah (baik naik-turun atau turun-naik). <br>
-             Grafiknya bisa berpotongan dengan sumbu-x di tiga titik, dua titik, satu titik, atau bahkan tidak sama sekali.
-            </p>
-          </section>
-
-        <section id="contoh">
-            <h2>Contoh Soal Fungsi Kubik</h2>
+          <h2>Contoh Soal Fungsi Kubik</h2>
+          <div style="text-align: left;">
             <p>
               <h3>f(x) = x³-6x²+8x</h4>
+                <br>
+                <h3>Mencari titik potong sumbu x dan y</h3>
               <h4> •> Titik potong sumbu x (y=0) </h4>
               y = x³-6x²+8x <br>
               0 = x (x²-6x+8) <br>
@@ -80,12 +82,12 @@
               y = (0)³ - 6(0)² +8(0) <br> 
               y = 0 - 0 + 0 <br>
               y = 0 -> (0,0) <br>
-
-              <h4>•>Titik stasioner</h4>
+              <br>
+              <h3>Mencari titik ekstrim</h3>
+              <h4>•>Titik ekstrim sumbu x</h4>
               y = x³-6x²+8x <br>
               y' = 3x²-12x+8 <br>
-
-
+              <h5>Mencari titik ekstrim sumbu x menggunakan rumus ABC sebagai berikut : </h5>
               <table class="table-container">
                 <tr class="row">
                   <td>x1x2 = </td>
@@ -253,7 +255,7 @@
                   <td>x2 = </td>
                   <td>
                     <span class="flex-container">
-                      <span class="text-center-container">
+                      <span class="text-center-container">  
                         <span class="equation">
                           0.84
                           </tr>
@@ -261,28 +263,35 @@
                        </section>
 
                        <section>
-                        <h4>•>Subtitusi</h4>
+                         <div style="text-align: left;">
+                         <h4>•>Titik ekstrim sumbu y</h4>
+                        cara mencari titik ekstrim sumbu y adalah dengan mensubstitusi nilai x yang di dapat pada pencarian titik ekstrim sumbu x <br>
+                        <h5>Substitusi nilai x1 ke persamaan awal untuk mencari nilai y1:</h5>
                         y1 = (3.15)³ - 6(3.15)² + 8(3.15) <br>
                         y1 = 31.255875 -  6(9.9225) + 8(3.15) <br>
                         y1 = 31.255875 - 59.535 + 25.2 <br>
                         y1 = -3.0794125 <br>
                         y1 = -3.08
-                        <h4>•>Subtitusi</h4>
-                          y1 = (0.84)³ - 6(0.84)² + 8(0.84) <br>
-                          y1 = 0.592704 -  6(0.7056) + 8(0.84) <br>
-                          y1 = 0.592704 - 4.2336 + 6.72 <br>
-                          y1 = 3.079104 <br>
-                          y1 = 3.08 
+                        <br>
+                        <h5>Substitusi nilai x2 ke persamaan awal untuk mencari nilai y2:</h5>
+                          y2 = (0.84)³ - 6(0.84)² + 8(0.84) <br />
+                          y2 = 0.592704 -  6(0.7056) + 8(0.84) <br />
+                          y2 = 0.592704 - 4.2336 + 6.72 <br />
+                          y2 = 3.079104 <br>
+                          y2 = 3.08 
+                      </section>
+
+                      <section>
+                        <h3>Menentukan titik ekstrim maksimum dan minimum</h3>
+                        <div >
+                        <p>Titik ekstrim maksimum adalah (0.84, 3.08)</p>
+                        <p>Titik ekstrim minimum adalah (3.15, -3.08)</p>
+                        <h3>Gambar grafuk fungsi f(x) = x<sup>3</sup> - 6x<sup>2</sup> + 8x :</h3>
+                        <img src="fungsi.png" alt="middle" width="500">
                       </section>
 </p>
 </section>
 
-
-
-<!-- Tombol Kembali -->
-<div class="flex justify-center">
-   <a href="materi.html" class="button-primary">Kembali</a>
-</div>
 
 <script src="script.js"></script>
 
