--- a/tentang.html
+++ b/tentang.html
@@ -90,7 +90,7 @@
                 >@zaskiajanualitadevi</a
               >
             </p>
-            <p class="col-span-2">Tugas : Pengembang Website</p>
+            <p class="col-span-2">Tugas : Pencari materi</p>
           </div>
         </div>
       </div>
@@ -121,7 +121,7 @@
                 >@rdnannisaa</a
               >
             </p>
-            <p class="col-span-2">Tugas : Pengembang Website</p>
+            <p class="col-span-2">Tugas : Pencari materi</p>
           </div>
         </div>
       </div>
@@ -147,7 +147,7 @@
                 >@Sahrul.055</a
               >
             </p>
-            <p class="col-span-2">Tugas : Pengembang Website</p>
+            <p class="col-span-2">Tugas : Pengembang Manual book</p>
           </div>
         </div>
       </div>
